--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "next": "11.0.0",
+    "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "react-google-login": "^5.2.2",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
