Ajustes e seleção de lista obrigatória

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
+## GOOGLE AUTH
 GOOGLE_CLIENT_ID = "999990115052-th6vvtj5erkjk3f8u957dhraib89an87.apps.googleusercontent.com"
+
+## AIRTABLE
+AIRTABLE_API_KEY = "keyxy5TxmdGgPFZ2D"
+AIRTABLE_BASE_ID = "appieODPo8GN8oRL6"
