--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,13 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:react/recommended", "standard", "prettier"],
+  "extends": [
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "standard",
+    "prettier"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
@@ -24,6 +30,8 @@
     "@typescript-eslint/no-use-before-define": ["error"],
     "semi": "off",
     "no-unused-vars": "off",
-    "react/prop-types": "off"
+    "@typescript-eslint/no-unused-vars": ["error"],
+    "react/prop-types": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   }
 }
