--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "airtable": "^0.11.1",
+    "axios": "^0.21.1",
     "next": "11.0.0",
     "polished": "^4.1.3",
     "react": "17.0.2",
