--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
     "react-google-login": "^5.2.2",
-    "styled-components": "^5.3.0"
+    "react-tsparticles": "^1.30.4",
+    "styled-components": "^5.3.0",
+    "tsparticles": "^1.30.4",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
