--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react-tsparticles": "^1.30.4",
     "styled-components": "^5.3.0",
     "tsparticles": "^1.30.4",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
     "@types/styled-components": "^5.1.10",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "babel-plugin-styled-components": "^1.12.0",
