--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@components": ["components"],
+      "@contexts": ["contexts"],
+      "@models": ["models"],
+      "@services": ["services"],
+      "@styles": ["styles"],
+      "@utils": ["utils"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
