--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,9 @@
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
+  "globals": {
+    "JSX": true
+  },
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
